fix(site): don't stretch navigation select

--- a/src/site/components/Navigation/Navigation.module.css
+++ b/src/site/components/Navigation/Navigation.module.css
@@ -6,10 +6,6 @@
   padding: 8px;
 }
 
-.menu {
-  flex-grow: 1;
-}
-
 .button {
   display: none;
 }
